--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,3 +2,6 @@ useDynLib(pairedfda, .registration=TRUE)
 importFrom(Rcpp, evalCpp)
 exportPattern("^[[:alpha:]]+")
 import(orthogonalsplinebasis,MASS)
+importFrom("grDevices", "rainbow")
+importFrom("graphics", "lines", "par")
+importFrom("stats", "rnorm")
