--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Paired Functional Data Analysis
 Version: 1.0
 Author: Lan Zhou, Huiya Zhou <huiya@stat.tamu.edu>
 Maintainer: Huiya Zhou <huiya@stat.tamu.edu>
-Description: This package focuses on the paired functional data analysis. Fit paired data to joint functional data models. 
+Description: Fit paired data to joint functional data models as described in Lan Zhou, Jianhua Z. Huang and Raymond J. Carroll (2008) <doi:10.1093/biomet/asn035>. 
 License: GPL-3
 Imports: Rcpp (>= 1.0.3), orthogonalsplinebasis, MASS
 LinkingTo: Rcpp, RcppArmadillo
@@ -12,4 +12,3 @@ RoxygenNote: 7.0.2
 Suggests: 
     knitr,
     rmarkdown
-VignetteBuilder: knitr
